--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Spring MVC
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
